--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/datetimepicker": "^6.7.3",
     "expo": "^48.0.0",
     "expo-cli": "^6.3.8",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
+    "react-datetime-picker": "^5.5.3",
     "react-dom": "18.2.0",
+    "react-mobile-datepicker": "^4.0.2",
     "react-native": "0.71.3",
+    "react-native-date-picker": "^4.3.3",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-web": "~0.18.11"
   },
   "devDependencies": {
