--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-mobile-datepicker": "^4.0.2",
     "react-native": "0.71.3",
     "react-native-date-picker": "^4.3.3",
+    "react-native-keyboard-aware-scrollview": "^2.1.0",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-web": "~0.18.11"
   },
